MODINV-1389: Populate location code in MARC Holdings during update ownership